Non-callable "handleEvent" property is silently ignored https://bugs.webkit.org/show_bug.cgi?id=200066

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-09-26
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/IndexedDB/fire-error-event-exception-expected.txt:
* web-platform-tests/IndexedDB/fire-success-event-exception-expected.txt:
* web-platform-tests/IndexedDB/fire-upgradeneeded-event-exception-expected.txt:
* web-platform-tests/dom/events/EventListener-handleEvent-expected.txt:

Source/WebCore:

Tests: imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html
       imported/w3c/web-platform-tests/IndexedDB/fire-success-event-exception.html
       imported/w3c/web-platform-tests/IndexedDB/fire-upgradeneeded-event-exception.html
       imported/w3c/web-platform-tests/dom/events/EventListener-handleEvent.html

* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::handleEvent): Report TypeError if "handleEvent" is not callable.

Canonical link: https://commits.webkit.org/215818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250385 268f45cc-cd09-0410-ab3c-d52691b4dbfc